# cosmwasm-mcp-template

./: Cargo.toml  README.md
src/: contract.rs  execute.rs  instruction.rs  main.rs  query.rs  server.rs
